<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/ambientModeToggle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/startMargin"
        android:layout_marginEnd="@dimen/startMargin"
        android:text="@string/settings_ambient_mode"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/muteModeToggle"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/muteModeToggle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/startMargin"
        android:layout_marginEnd="@dimen/startMargin"
        android:text="@string/settings_mute_dimmed"

        app:layout_constraintLeft_toRightOf="@id/ambientModeToggle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/lowBitAmbientToggle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/startMargin"
        android:layout_marginEnd="@dimen/startMargin"
        android:text="@string/settings_low_bit_ambient"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/burnInProtectionToggle"
        app:layout_constraintTop_toBottomOf="@id/muteModeToggle" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/burnInProtectionToggle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/startMargin"
        android:layout_marginEnd="@dimen/startMargin"
        android:text="@string/settings_burn_in_protecttion"

        app:layout_constraintLeft_toRightOf="@id/lowBitAmbientToggle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/muteModeToggle" />

    <RadioGroup
        android:id="@+id/faceType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal"
        android:layout_marginLeft="@dimen/startMargin"
        android:layout_marginRight="@dimen/startMargin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/burnInProtectionToggle"
        >
        <RadioButton
            android:id="@+id/faceTypeRound"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/settings_face_type_round"
            />
        <RadioButton
            android:id="@+id/faceTypeSquare"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/settings_face_type_square"
            />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/sizeContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/startMargin"
        android:layout_marginEnd="@dimen/startMargin"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/faceType">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"

            android:layout_weight="1"
            android:text="@string/settings_screen_size"
            android:textColor="@color/black" />

        <com.balsdon.harness.ui.view.PreloadedSpinner
            android:id="@+id/sizeSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:items="@array/screen_size_list"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>