<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/timeHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/startMargin"
        android:layout_marginEnd="@dimen/startMargin"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/settings_time_heading_label"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <View
        android:id="@+id/timeHeadingSeparator"
        android:layout_width="match_parent"
        android:layout_height="1dp"

        android:background="@color/light_grey"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timeHeading" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/animateTimeToggle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/startMargin"
        android:layout_marginEnd="@dimen/startMargin"
        android:text="@string/settings_animated_time"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timeHeadingSeparator" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/twentyFourHourMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/startMargin"
        android:layout_marginEnd="@dimen/startMargin"
        android:enabled="false"
        android:text="@string/settings_24_hour_mode"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/animateTimeToggle" />

    <LinearLayout
        android:id="@+id/speedContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/startMargin"
        android:layout_marginEnd="@dimen/startMargin"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/twentyFourHourMode">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"

            android:layout_weight="1"
            android:text="@string/settings_speed"
            android:textColor="@color/black" />

        <com.balsdon.harness.ui.view.PreloadedSpinner
            android:id="@+id/speedSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:items="@array/time_speed_list"
            />
    </LinearLayout>

    <com.balsdon.harness.ui.view.TimePickerView
        android:id="@+id/timePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/speedContainer"

        app:separator="@string/time_separator"
        />

</androidx.constraintlayout.widget.ConstraintLayout>